--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-cffi==1.5.0
-cryptography==1.2.1
+cffi==1.2.1
+cryptography==1.0.2
 enum34==1.1.2
 github3.py==1.0.0a2
 idna==2.0
-ipaddress==1.0.16
+ipaddress==1.0.14
 Jinja2==2.8
 lxml==3.5.0
 MarkupSafe==0.23
-ndg-httpsclient==0.4.0
+ndg-httpsclient==0.3.3
 pyasn1==0.1.9
+pycld2==0.31
 pycparser==2.14
-pyOpenSSL==0.15.1
+pyOpenSSL==0.14
 requests==2.9.1
 sh==1.11
 six==1.10.0
-Unidecode==0.4.19
+Unidecode==0.4.17
 uritemplate.py==0.3.0
-wheel==0.24.0
+wheel==0.26.0
